--- a/src/App.css
+++ b/src/App.css
@@ -40,12 +40,12 @@ hr {
 }
 
 .btn {
-  font-size: 80%;
+  font-size: 1.1rem;
   border-radius: 5rem;
-  letter-spacing: 0.1rem;
+  letter-spacing: 0.05rem;
   font-weight: bold;
-  width: 90%;
-  padding: 1rem;
+  width: 93%;
+  padding: 0.7rem;
   opacity: 0.7;
   transition: all 0.2s;
 }
@@ -61,4 +61,9 @@ hr {
 }
 .card:hover .btn {
   opacity: 1;
+}
+.row {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
 }
